--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "morgan": "^1.10.0",
     "nginx-conf": "^2.1.0",
     "nodemon": "^2.0.20",
+    "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
